objects/Arbitration_Claim__mdt.object
<CustomObject>
    <description>A custom metadata type to store Arbitration Claim Form CheckBoxes. This Referenced in the LWC Arbitration Claim Form Based on the CheckBox Selection.</description>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Hide_On_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Based on this Field we Show and Hide the Field on the Form.</description>
        <inlineHelpText>Based on this Field we Show and Hide the Field on the Form.</inlineHelpText>
        <label>Show Hide On Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubSet_Form__c</fullName>
        <label>SubSet Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cosmetic</fullName>
                    <default>true</default>
                    <label>Cosmetic</label>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Structural</fullName>
                </value>
                <value>
                    <fullName>History &amp; Equipment</fullName>
                </value>
                <value>
                    <fullName>Wheel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Arbitration Claim CheckBox</label>
    <pluralLabel>Arbitration Claim CheckBoxs</pluralLabel>
</CustomObject>